--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,9 +18,10 @@
     --foreground: #ededed;
   }
 }
+html {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply bg-white text-gray-900 dark:bg-gray-900 dark:text-white transition-colors duration-300;
 }
